# blsex

./: .gitignore  README.md  cargo.toml  checksum-Elixir.BlsEx.Native.exs  checksum-Elixir.BlsEx.exs  mix.exs
.github/workflows/: release.yml
config/: config.exs
lib/: bls_ex.ex
lib/bls_ex/: application.ex  keystore.ex  native.ex  standalone_wasm.ex
native/bls/: Cargo.toml  README.md
native/bls/.cargo/: config.toml
native/bls/src/: errors.rs  keys.rs  lib.rs  signature.rs
priv/native/wasm_bls/: Cargo.toml  Makefile  bls.wasm
priv/native/wasm_bls/scripts/: aggregate_public_key.sh  aggregate_signature.sh  get_public_key.sh  sign.sh  verify.sh  verify_aggregated_signature.sh
priv/native/wasm_bls/src/: hash.rs  lib.rs  request.rs
test/: bls_ex_test.exs
