[package]
name = "bls"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "bls"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.33.0"
serde = { version = "1.0.197", features = ["derive"] }
dusk-bls12_381 = "0.13.0"
hex = "0.4.3"
dusk-bytes = "0.1.7"
bls12_381 = { version = "0.8.0", features = ["experimental"] }
pairing = "0.23.0"
group = "0.13.0"
sha2 = "0.10.8"
