[package]
name = "wasm_bls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.1.0"
serde = { version = "1.0.197", features = ["derive"] }
dusk-bls12_381 = "0.13.0"
hex = "0.4.3"
dusk-bytes = "0.1.7"
bls12_381 = { version = "0.8.0", features = ["experimental"] }
pairing = "0.23.0"
group = "0.13.0"
sha2 = "0.10.8"
